macros/tests/ui/fail/c_type_missing_transfer.rs
// Test that c_type requires transfer parameter
use glib::subclass::prelude::*;
use gobject_macros::ffi_impl;

mod imp {
    use super::*;
    #[derive(Default)]
    pub struct TestObject;

    #[glib::object_subclass]
    impl ObjectSubclass for TestObject {
        const NAME: &'static str = "TestObject";
        type Type = super::TestObject;
    }

    impl ObjectImpl for TestObject {}
}

glib::wrapper! {
    pub struct TestObject(ObjectSubclass<imp::TestObject>);
}

#[ffi_impl]
impl TestObject {
    // Missing transfer parameter
    fn test_method(
        &self,
        #[c_type(i32)] value: i32,
    ) -> bool {
        value > 0
    }
}

fn main() {}
